[metadata]
name = multiphenicsx
version = 0.2.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = Easy prototyping of multiphysics problems on conforming meshes in FEniCSx
url = https://github.com/multiphenics/multiphenicsx
project_urls =
    Homepage = https://github.com/multiphenics/multiphenicsx
    Issues = https://github.com/multiphenics/multiphenicsx/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    cppimport
    fenics-dolfinx
    mpi4py
    numpy
    petsc4py

[options.package_data]
multiphenicsx =
    cpp/multiphenicsx/**/*.cpp
    cpp/multiphenicsx/**/*.h

[options.extras_require]
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions
    flake8-isort
    flake8-quotes
tests =
    coverage
    kaleido
    nbqa
    nbvalx @ git+https://github.com/multiphenics/nbvalx.git
    pytest
tutorials =
    gmsh
    itkwidgets
    plotly
    pyvista
    slepc4py
    sympy

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
i2041_exclude = multiphenicsx, multiphenicsx.*
i2045_include = *
i2045_exclude = multiphenicsx, multiphenicsx.*
ignore = ANN101, W503
exclude = .eggs, build, dist
per-file-ignores =
    multiphenicsx/**/__init__.py: F401
    tests/notebooks/data/*.py: D100, I004
    tutorials/**/tutorial_*.py: D100, I004
    tutorials/**/generate_mesh*.py: D100, I004

[isort]
line_length = 120
multi_line_output = 4
order_by_type = False
