[metadata]
name = multiphenicsx
version = 0.2.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = Easy prototyping of multiphysics problems on conforming meshes in FEniCSx
url = https://github.com/multiphenics/multiphenicsx
project_urls =
    Homepage = https://github.com/multiphenics/multiphenicsx
    Issues = https://github.com/multiphenics/multiphenicsx/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    cppimport
    fenics-dolfinx
    mpi4py
    numpy >= 1.21.0
    petsc4py

[options.package_data]
multiphenicsx =
    cpp/multiphenicsx/**/*.cpp
    cpp/multiphenicsx/**/*.h
    py.typed

[options.extras_require]
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions
    flake8-isort
    flake8-quotes
    mypy
tests =
    coverage
    nbqa
    nbvalx[unit_tests] @ git+https://github.com/multiphenics/nbvalx.git
    pytest
    scipy
tutorials =
    gmsh
    nbvalx[notebooks] @ git+https://github.com/multiphenics/nbvalx.git
    slepc4py
    sympy
    viskex @ git+https://github.com/viskex/viskex.git

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
imr241_exclude = multiphenicsx, multiphenicsx.*
imr245_include = *
imr245_exclude = multiphenicsx, multiphenicsx.*
ignore = ANN101, W503
exclude = .eggs, build, dist
per-file-ignores =
    multiphenicsx/**/__init__.py: F401
    tests/notebooks/data/*.py: D100, I004
    tutorials/**/tutorial_*.py: D100, I004
    tutorials/**/generate_mesh*.py: D100, I004

[isort]
line_length = 120
multi_line_output = 4
order_by_type = False

[mypy]
check_untyped_defs = True
disallow_any_unimported = True
disallow_untyped_defs = True
exclude = (^\.eggs|^build|^dist|conftest\.py$)
implicit_reexport = True
no_implicit_optional = True
pretty = True
show_error_codes = True
strict = True
warn_return_any = True
warn_unused_ignores = True

[mypy-cppimport]
ignore_missing_imports = True

[mypy-dolfinx.cpp]
ignore_missing_imports = True

[mypy-gmsh]
ignore_missing_imports = True

[mypy-ipyparallel]
ignore_missing_imports = True

[mypy-matplotlib]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-mpl_toolkits.*]
ignore_missing_imports = True

[mypy-petsc4py]
ignore_missing_imports = True

[mypy-petsc4py.PETSc]
ignore_missing_imports = True

[mypy-plotly]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-scipy]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-slepc4py]
ignore_missing_imports = True

[mypy-slepc4py.SLEPc]
ignore_missing_imports = True

[mypy-ufl]
ignore_missing_imports = True
